--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,71 @@
 plugins {
-    id 'java'
-    id 'org.springframework.boot' version '3.4.2'
-    id 'io.spring.dependency-management' version '1.1.7'
+	id 'java'
+	id 'org.springframework.boot' version '3.4.2'
+	id 'io.spring.dependency-management' version '1.1.7'
+
+	id 'com.diffplug.spotless' version '7.0.3'
 }
 
-group = 'com.example'
+group = 'com.tad'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
-    }
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(17)
+	}
 }
 
 configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
 }
 
 repositories {
-    mavenCentral()
+	mavenCentral()
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
-    useJUnitPlatform()
+	useJUnitPlatform()
+}
+
+spotless {
+	format 'misc', {
+		target '*.gradle', '.gitattributes', '.gitignore'
+
+		trimTrailingWhitespace()
+		leadingSpacesToTabs(4)
+		endWithNewline()
+	}
+	java {
+		importOrder()
+		removeUnusedImports()
+		cleanthat()
+		googleJavaFormat()
+		formatAnnotations()
+	}
+}
+
+afterEvaluate {
+	def spotless = tasks.findByName('spotlessApply')
+	if (spotless) {
+		tasks.withType(JavaCompile).configureEach {
+			finalizedBy(spotless)
+		}
+
+		tasks.withType(GroovyCompile).tap {
+			configureEach {
+				finalizedBy(spotless)
+			}
+		}
+	}
 }
