--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,24 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: account-service-dev
+  name: account-service
   labels:
-    app: account-service-dev
+    app: account-service
 spec:
   replicas: 2
   strategy:
     type: RollingUpdate
   selector:
     matchLabels:
-      app: account-service-dev
+      app: account-service
   template:
     metadata:
-      name: account-service-dev
+      name: account-service
       labels:
-        app: account-service-dev
+        app: account-service
     spec:
       containers:
-        - name: account-service-dev
+        - name: account-service
           image: datpm/account-service:latest
           imagePullPolicy: Always
           ports:
