--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: account-service-dev
+  name: account-service
 spec:
   selector:
-    app: account-service-dev
+    app: account-service
   ports:
     - protocol: TCP
       port: 80
       targetPort: 8080
-      nodePort: 30080
+      nodePort: 30001
   type: NodePort
   
