--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 server:
-  port: 8080
+  port: ${PORT:8080}
 spring:
   application:
-    name: account-service
+    name: ${APP_NAME:account-service}
   profiles:
     active: ${PROFILES:dev}
 
